@@ -1,3 +1,5 @@
+Oct 22 2002  2.7.1  Various off-by-one errors in panelfront fixed (Million)
+
 Oct 20 2002  2.7.1  Moved devel to 2.7.1
 
 Oct 20 2002  2.6.2  Released 2.6.2 - Bugfixes and minor feature enhancements
